Some projects updated.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Your Name">
   <link rel="canonical" href="http://0.0.0.0:4000/">
 
-  <title>Ismail Group of Industries</title>
+  <title>Allism Construction Services</title>
 
   <!-- Bootstrap core CSS -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
         <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-	  <a class="navbar-brand js-scroll-trigger" href="#page-top">Ismail Group of Industries</a>
+	  <a class="navbar-brand js-scroll-trigger" href="#page-top"><img height="70" src="assets/img/logo.svg"/></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -58,9 +58,9 @@
   <!-- Header -->
   <header class="masthead">
     <div class="container">
-      <div class="intro-text"><div class="intro-lead-in"><p>Welcome to Ismail Group of Industries</p>
-</div><div class="intro-heading text-uppercase"><p>We provide multiple services</p>
-</div><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Services</a></div>
+      <div class="intro-text"><div class="intro-lead-in"><p>Welcome to Allism Construction Services</p>
+</div><div class="intro-heading text-uppercase"><p>Committed to superior quality and results</p>
+</div><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Learn more</a></div>
     </div>
   </header>
   <!-- End Header -->
@@ -73,7 +73,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Services</h2>
           
-		  <h3 class="section-subheading text-muted">Lorem ipsum</h3>
+		  <h3 class="section-subheading text-muted">We provide multiple services including concrete work, asphalt, excavations and NBN</h3>
 		  
         </div>
       </div>
@@ -85,9 +85,12 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading"><p>Civil Maintenance</p>
+          <h4 class="service-heading"><p>Concrete</p>
 </h4>
-          <div class="text-muted"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <div class="text-muted"><p>Allism Construction services is a well-established construction company that has extensive experience in architectural concrete and formwork design in both the domestic and commercial sectors.
+Our company specialises in exposed aggregate, coloured and plain concrete driveways, plus pathways and entertaining areas; offering an extensive range of products.
+If you have a slab or garage slab that needs doing, we have a great crew to take on any project to a very high standard. House &amp; Garage slabs require formwork and concrete pumps.
+We organize everything for the job and always work with the owner/manager to ensure that the project is planned and completed in time. If you’re looking for concreters in Melbourne that you can trust, we are here to help”</p>
 </div>
         </div>
 	  
@@ -96,9 +99,10 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading"><p>Excavation</p>
+          <h4 class="service-heading"><p>Asphalt Work</p>
 </h4>
-          <div class="text-muted"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <div class="text-muted"><p>At Allism , we specialise in all forms of asphalt &amp; civil construction, asphalt repairs and maintenance.
+To enhance your project we also supply &amp; install associated edging at your request including brick, timber, bluestone, concrete (coloured or plain)</p>
 </div>
         </div>
 	  
@@ -107,9 +111,27 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fab fa-markdown fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading"><p>Concreting</p>
+          <h4 class="service-heading"><p>Excavations</p>
 </h4>
-          <div class="text-muted"><p>Your description here, full <strong>Markdown</strong> support</p>
+          <div class="text-muted"><p>We provide all types of bulk excavation, cut and fill earthmoving for domestic, commercial and industrial/government projects.
+We have all the plant and machinery for massive bulk excavations, including excavations, tippers and all the earthmoving plant your project needs.
+We have trained staff and estimators to assist in project management of your project, including estimating and calculating volumes, time frames and schedules to ensure your construction project runs smoothly and most importantly to budget.
+With our extensive knowledge of the Melbourne suburbs and all of Victoria, we can provide an all-round service, from digging to removing of spoil. Our trained staff and company put customer satisfaction first.
+Not only do we aim at finishing your project as soon as possible, but we also focus on providing a clean and safe job site whilst we are completing your project.”</p>
+</div>
+        </div>
+	  
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fab fa-markdown fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading"><p>Telecom Networks</p>
+</h4>
+          <div class="text-muted"><p>ACS offers construction and installation of pit and pipe, rectification works, network relocation, exchanges, and lead in conduits.
+Our construction team specialise in telecommunications and are well versed in the current regulations.
+ACS has been building telecommunications networks for more than 10 years now.
+In recent times ACS has been involved in the roll out of the National Broadband Network into new estates.</p>
 </div>
         </div>
 	  
@@ -138,11 +160,11 @@
               <i class="fas fa-plus fa-3x"></i>
             </div>
           </div>
-          <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="">
+          <img class="img-fluid" src="assets/img/portfolio/illoura-avenure-1.jpg" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>Threads</h4>
-          <p class="text-muted">Illustration</p>
+          <h4>Asphalt - Illoura Avenue</h4>
+          <p class="text-muted">Ringwood East, VIC 3135</p>
         </div>
       </div>
 	
@@ -153,71 +175,11 @@
               <i class="fas fa-plus fa-3x"></i>
             </div>
           </div>
-          <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="">
+          <img class="img-fluid" src="assets/img/portfolio/newton-street-1.jpg" alt="">
         </a>
         <div class="portfolio-caption">
-          <h4>Explore</h4>
-          <p class="text-muted">Services</p>
-        </div>
-      </div>
-	
-      <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="#p3">
-          <div class="portfolio-hover">
-            <div class="portfolio-hover-content">
-              <i class="fas fa-plus fa-3x"></i>
-            </div>
-          </div>
-          <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="">
-        </a>
-        <div class="portfolio-caption">
-          <h4>Finish</h4>
-          <p class="text-muted">Identity</p>
-        </div>
-      </div>
-	
-      <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="#p4">
-          <div class="portfolio-hover">
-            <div class="portfolio-hover-content">
-              <i class="fas fa-plus fa-3x"></i>
-            </div>
-          </div>
-          <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="">
-        </a>
-        <div class="portfolio-caption">
-          <h4>Lines</h4>
-          <p class="text-muted">Branding</p>
-        </div>
-      </div>
-	
-      <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="#p5">
-          <div class="portfolio-hover">
-            <div class="portfolio-hover-content">
-              <i class="fas fa-plus fa-3x"></i>
-            </div>
-          </div>
-          <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="">
-        </a>
-        <div class="portfolio-caption">
-          <h4>Southwest</h4>
-          <p class="text-muted">Civil brand</p>
-        </div>
-      </div>
-	
-      <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="#p6">
-          <div class="portfolio-hover">
-            <div class="portfolio-hover-content">
-              <i class="fas fa-plus fa-3x"></i>
-            </div>
-          </div>
-          <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="">
-        </a>
-        <div class="portfolio-caption">
-          <h4>Window</h4>
-          <p class="text-muted">Fixing</p>
+          <h4>Excavation - Newton Street</h4>
+          <p class="text-muted">Maryborough, Maryborough VIC 3465</p>
         </div>
       </div>
 	
@@ -239,15 +201,15 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Threads</h2>
-                <p class="item-intro text-muted">subtitle lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="https://raw.githubusercontent.com/BlackrockDigital/startbootstrap-agency/master/src/assets/img/portfolio/04-full.jpg" alt="Shirts on a hanger">
+                <h2 class="text-uppercase">Illoura Avenue</h2>
+                <p class="item-intro text-muted">Asphalt work in Illoura Avenue</p>
+                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/illoura-avenure-1.jpg" alt="6 Illoura Avenue Asphalt Work">
 				<p><p>Use this area to describe your project. <strong>Markdown</strong> supported. This entry (project1.md) uses links for the image sources. All other projects in the portfolio use local images. Both work just fine! Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
 <ul class="list-inline">
-  <li>Date: January 2017</li>
-  <li>Client: Threads</li>
-  <li>Category: Illustration</li>
+  <li>Date: 19th February 2021</li>
+  <li>Client:</li>
+  <li>Category: Excavation</li>
 </ul>
 </p>		
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -274,156 +236,15 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="https://raw.githubusercontent.com/BlackrockDigital/startbootstrap-agency/master/src/assets/img/portfolio/04-full.jpg" alt="Keep Exploring">
-				<p><p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <h2 class="text-uppercase">Newton Street Maryborough</h2>
+                <p class="item-intro text-muted">Excavation work in Newton Street</p>
+                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/newton-street-1.jpg" alt="22 Newton Street Maryborough Excavation">
+				<p><p>Use this area to describe your project. <strong>Markdown</strong> supported. This entry (project1.md) uses links for the image sources. All other projects in the portfolio use local images. Both work just fine! Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
 <ul class="list-inline">
-  <li>Date: January 2017</li>
-  <li>Client: Explore</li>
-  <li>Category: Graphic Design</li>
-</ul>
-</p>		
-                <button class="btn btn-primary" data-dismiss="modal" type="button">
-                  <i class="fas fa-times"></i>
-                  Close Project</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="portfolio-modal modal fade" id="p3" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <div class="modal-body">
-                <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="https://raw.githubusercontent.com/BlackrockDigital/startbootstrap-agency/master/src/assets/img/portfolio/06-full.jpg" alt="">
-				<p><p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-
-<ul class="list-inline">
-  <li>Date: January 2017</li>
-  <li>Client: Finish</li>
-  <li>Category: Identity</li>
-</ul>
-</p>		
-                <button class="btn btn-primary" data-dismiss="modal" type="button">
-                  <i class="fas fa-times"></i>
-                  Close Project</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="portfolio-modal modal fade" id="p4" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <div class="modal-body">
-                <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="https://raw.githubusercontent.com/BlackrockDigital/startbootstrap-agency/master/src/assets/img/portfolio/04-full.jpg" alt="">
-				<p><p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-
-<ul class="list-inline">
-  <li>Date: October 2019</li>
-  <li>Client: Lines</li>
-  <li>Category: Branding</li>
-</ul>
-
-</p>		
-                <button class="btn btn-primary" data-dismiss="modal" type="button">
-                  <i class="fas fa-times"></i>
-                  Close Project</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="portfolio-modal modal fade" id="p5" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <div class="modal-body">
-                <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="https://raw.githubusercontent.com/BlackrockDigital/startbootstrap-agency/master/src/assets/img/portfolio/05-full.jpg" alt="">
-				<p><p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-
-<ul class="list-inline">
-  <li>Date: October 2019</li>
-  <li>Client: Southwest</li>
-  <li>Category: Website Design</li>
-</ul>
-</p>		
-                <button class="btn btn-primary" data-dismiss="modal" type="button">
-                  <i class="fas fa-times"></i>
-                  Close Project</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="portfolio-modal modal fade" id="p6" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl"></div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <div class="modal-body">
-                <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="https://raw.githubusercontent.com/BlackrockDigital/startbootstrap-agency/master/src/assets/img/portfolio/06-full.jpg" alt="">
-				<p><p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-
-<ul class="list-inline">
-  <li>Date: October 2019</li>
-  <li>Client: Window</li>
-  <li>Category: Photography</li>
+  <li>Date: 19th February 2021</li>
+  <li>Client:</li>
+  <li>Category: Excavation</li>
 </ul>
 </p>		
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -746,7 +567,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Ismail Group of Industries 2021</span>
+          <span class="copyright">Copyright &copy; Allism Construction Services 2021</span>
         </div>
 		<!-- Social Media -->
         <div class="col-md-4">
