--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Your Name">
   <link rel="canonical" href="http://0.0.0.0:4000/404.html">
 
-  <title>Page Not Found | Ismail Group of Industries</title>
+  <title>Page Not Found | Allism Construction Services</title>
 
   <!-- Bootstrap core CSS -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
       <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="background-color:#212529">
     <div class="container">
-	  <a class="navbar-brand js-scroll-trigger" href="/#">Ismail Group of Industries</a>
+	  <a class="navbar-brand js-scroll-trigger" href="/#"><img height="70" src="assets/img/logo.svg"/></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -83,7 +83,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Ismail Group of Industries 2021</span>
+          <span class="copyright">Copyright &copy; Allism Construction Services 2021</span>
         </div>
 		<!-- Social Media -->
         <div class="col-md-4">
