--- a/legal.html
+++ b/legal.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Your Name">
   <link rel="canonical" href="http://0.0.0.0:4000/legal.html">
 
-  <title>Privacy Policy | Ismail Group of Industries</title>
+  <title>Privacy Policy | Allism Construction Services</title>
 
   <!-- Bootstrap core CSS -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
       <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="background-color:#212529">
     <div class="container">
-	  <a class="navbar-brand js-scroll-trigger" href="/#">Ismail Group of Industries</a>
+	  <a class="navbar-brand js-scroll-trigger" href="/#"><img height="70" src="assets/img/logo.svg"/></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -69,7 +69,7 @@
 	<h2 class="section-heading text-uppercase">Privacy Policy</h2>
 </div>
 
-<p>This Privacy Policy describes how your personal information is collected, used, and shared when you visit Ismail Group of Industries (the “Site”).</p>
+<p>This Privacy Policy describes how your personal information is collected, used, and shared when you visit Allism Construction Services (the “Site”).</p>
 
 <p><strong>PERSONAL INFORMATION WE COLLECT</strong></p>
 
@@ -91,7 +91,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Ismail Group of Industries 2021</span>
+          <span class="copyright">Copyright &copy; Allism Construction Services 2021</span>
         </div>
 		<!-- Social Media -->
         <div class="col-md-4">
