Fix image issue and update dates

--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@ In recent times ACS has been involved in the roll out of the National Broadband 
 				<p><p>Use this area to describe your project. <strong>Markdown</strong> supported. This entry (project1.md) uses links for the image sources. All other projects in the portfolio use local images. Both work just fine! Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
 <ul class="list-inline">
-  <li>Date: 19th February 2021</li>
+  <li>Date: September 2018</li>
   <li>Client:</li>
-  <li>Category: Excavation</li>
+  <li>Category: Asphalt</li>
 </ul>
 </p>		
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -242,7 +242,7 @@ In recent times ACS has been involved in the roll out of the National Broadband 
 				<p><p>Use this area to describe your project. <strong>Markdown</strong> supported. This entry (project1.md) uses links for the image sources. All other projects in the portfolio use local images. Both work just fine! Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
 <ul class="list-inline">
-  <li>Date: 19th February 2021</li>
+  <li>Date: February 2021</li>
   <li>Client:</li>
   <li>Category: Excavation</li>
 </ul>
