Update canonical links

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Agency Bootstrap theme converted to a Jekyll theme, plus new features: Google Analytics, Markdown support, custom pages, and more!">
   <meta name="author" content="Your Name">
-  <link rel="canonical" href="http://0.0.0.0:4000/404.html">
+  <link rel="canonical" href="/404.html">
 
   <title>Page Not Found | Allism Construction Services</title>
 
